[package]
name = "md-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = {version = "4.4.14", features = ["derive"]}
markdown = "1.0.0-alpha.16"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
